fix blog css spacing

--- a/styles/master.css
+++ b/styles/master.css
@@ -47,7 +47,6 @@ flex-direction: row;
 align-items: flex-end;
 }
 
-
 .header-image {
   background-repeat:no-repeat;
   background-color: #000;
@@ -108,19 +107,18 @@ width: auto;
 }
 */
 
-
 nav {
   font-size: .8rem;
   color: #0f52ba;
-  padding-left: 70px;
+  padding-left: 3.5rem;
   font-weight: bold;
   background-color: #ccc;
-  height: 2.5rem;
+  height: 2.75rem;
 }
 
 ul {
   list-style-type: none;
-  padding-top: .5rem;
+  padding-top: .85rem;
   margin-top: 0px;
 }
 
@@ -167,15 +165,15 @@ li a {
 /************ blog ***************/
 
 .blog {
-    margin-left: 7rem;
-    margin-right: 7rem;
+    margin-left: 6rem;
+    margin-right: 6rem;
     display: flex;
     padding-top: 0px;
 }
 
-
 .blogheader {
-  padding-left: 7rem;
+  padding-left: 6rem;
+  margin-bottom: 0;
 }
 
 .blog-image {
@@ -190,8 +188,6 @@ li a {
 .img {
   width: 100%;  /* fit image into grid */
 }
-
-
 
 .btn-adopt {
   width: 100%;
@@ -228,7 +224,6 @@ padding: .75rem;
   border: 1px solid #999;
   line-height: 10%;
 }
-
 
 .card-2  {
   grid-column: 3 / 5;
